# InternshipProjects

./: README.md
data_generation/: README.md  (+2 more)
pdf_parser/: README.md  pyproject.toml
pdf_parser/pdf_parser/: main.py  pdf_parser.py  table_extraction.py
pdf_parser/pdf_parser/data/: 2022_Apple_ESG_Report.json
qualitative-factors/dataset/synthetic_data_generation/: README.md  pyproject.toml  synthesize_data.ipynb  synthesize_data.py
qualitative-factors/semantic-search/: extract_sentence_queries.py  generate_sentence_embeddings.py  page_based_extraction.py  pyproject.toml  query_extraction_network.py  testing.py
qualitative-factors/semantic-search/data/: processed_output.json
qualitative-factors/semantic-search/misc/: recall_scores.txt
qualitative-factors/semantic-search/model_predictions/: top_pred_indices_by_query_large.pkl
qualitative_extraction/: README.md  pyproject.toml
qualitative_extraction/preprocessing/: process_atomic_query.py
qualitative_extraction/qualitative_extraction/: bd_atomic_queries.txt  extraction.ipynb
qualitative_extraction/qualitative_extraction/N6LEV9~G/: 0-e3b0c44298.json  10-331b99c3ed.json  11-be5fa66aa0.json  13-6ea5ea42b7.json  18-18e8129dfd.json  2-5e38541161.json  22-41bfff8bde.json  26-5a394e0409.json  29-7cdd7f5208.json  3-bf6eba46ff.json  31-cc6949ae08.json  32-2a32052baf.json  35-76afee7e8f.json  38-84e280b237.json  43-65193b33a1.json  44-981726fcc3.json  46-e88b0d0426.json  53-e3dad7a9d9.json  54-b5e97117d5.json  56-436d1b648c.json  58-f996356211.json  59-47ff4bf84e.json  61-c1b3e72db2.json  67-c67f5c7ad2.json  69-b6bee6d068.json  7-c1bb6ef1f4.json  72-960bb1d8ec.json  78-9cf2be3ad3.json  79-aef2e243e1.json  80-a01fe5cb06.json  81-4631b465b2.json  82-ba2cd9a7ed.json  87-e3b0c44298.json
qualitative_extraction/qualitative_extraction/output/: tax_output.json
qualitative_extraction/qualitative_extraction/testing/: bd_test.json  bd_test.txt  cc_test.txt  ci_test.txt  combined_test.txt  hr_test.txt  tax_test.txt
(+13008 files in other folders)
