[tool.poetry]
name = "pdf-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.16"
pymupdf = "^1.24.10"
openai = "^1.45.0"
pypdf2 = "^3.0.1"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
