[tool.poetry]
name = "qualitative-extraction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.11"
scikit-learn = "^1.5.1"
tensorflow-hub = "^0.16.1"
numpy = "^1.0.0"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
ipython = "^8.26.0"
langchain-community = "^0.2.10"
sentence-transformers = "^3.0.1"
transformers = "^4.43.2"
huggingface-hub = "^0.24.2"
ipywidgets = "^8.1.3"
openai = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
