[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.37.1"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
langchain-text-splitters = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
